--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,18 +3,16 @@ name: linter
 on:
   push:
     branches:
-      - dev
       - main
   pull_request:
     branches:
-      - dev
       - main
 
 permissions:
   contents: write
 
 jobs:
-  quality:
+  pint:
     runs-on: ubuntu-latest
     environment: Testing
     steps:
@@ -41,3 +39,27 @@ jobs:
         with:
           commit_message: "fix: PHP code style (Pint)"
           branch: ${{ github.head_ref }}
+
+  larastan:
+    name: Run Larastan (Static Analysis)
+    runs-on: ubuntu-latest
+    environment: Testing
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.4"
+
+      - name: Add Flux Credentials Loaded From ENV
+        run: composer config http-basic.composer.fluxui.dev "${{ secrets.FLUX_USERNAME }}" "${{ secrets.FLUX_LICENSE_KEY }}"
+
+      - name: Install Dependencies (with dev)
+        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+
+      - name: Copy Environment File
+        run: cp .env.example .env
+
+      - name: Run Larastan
+        run: ./vendor/bin/phpstan analyse
